# organization_catalog_api

./: .env.example  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/: api.py  deps.py
app/api/routes/: activities.py  buildings.py  organizations.py
app/core/: config.py
app/crud/: activity.py  base.py  building.py  organization.py
app/migrations/: env.py
app/migrations/versions/: 0f7ab719a721_initial_migration.py
app/models/: activity.py  building.py  organization.py  phone_number.py
app/schemas/: activity.py  building.py  organization.py
deploy/: Dockerfile  init.sql
scripts/: run_tests.sh  seed_db.py  wait_for_db.py
tests/: conftest.py  test_activities.py  test_buildings.py  test_organizations.py  test_security_and_errors.py
